tools/KLEE_SOURCE/Release+Asserts/bin/temp_test/klee-out-47/test000001.pc
array a1[24] : w32 -> w8 = symbolic
(query [(Eq false
            (Eq 45796880
                N0:(ReadLSB w64 16 a1)))
        (Ult (Add w64 18446604272481143088 N0) 1)]
       false)
